<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
  android:id="@+id/layout2"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
>
  <TimePicker
    android:id="@+id/tPicker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="100px"
    android:layout_y="12px"
  >
  </TimePicker>

  <TextView
      android:id="@+id/text1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_x="2dp"
      android:layout_y="60dp"
      android:text="@string/str_text1"
      android:textColor="@drawable/white"
      android:textSize="16sp" />

  <TextView
      android:id="@+id/text2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_x="2dp"
      android:layout_y="147dp"
      android:text="@string/str_text2"
      android:textColor="@drawable/white"
      android:textSize="16sp" />

  <TextView
      android:id="@+id/text3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_x="141dp"
      android:layout_y="149dp"
      android:text="@string/str_text3"
      android:textColor="@drawable/white"
      android:textSize="16sp" />

  <EditText
      android:id="@+id/mEdit"
      android:layout_width="48dp"
      android:layout_height="wrap_content"
      android:layout_x="85dp"
      android:layout_y="141dp"
      android:ems="10"
      android:text="15"
      android:textSize="16sp" >

      <requestFocus />
  </EditText>

</AbsoluteLayout>